5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_2425.log
== TEST (2019-03-31 20:46:35) 
-- CODE:
quilomentros = float(input("digite um numero"))
litros = float(input("digite um numero"))
km/l = (quilomentros/litros)
print(round(km/l ,3))
-- ERROR:
File "XXXX", line 3
    km/l = (quilomentros/litros)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:47:44) 
-- CODE:
quilomentros = float(input("digite um numero"))
litros = float(input("digite um numero"))
total = (km/l)
print(round(total ,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:48:45) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = (km/l)
print(round(total ,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:49:06) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = (km/l)
print(round(total ,3))
-- EXECUTION TIME:
0.174395
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:59:44) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = round(km/l , 3)
print(total,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:59:58) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = round(km/l , 3)
print(total,"km/l")
-- EXECUTION TIME:
0.137168
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
